// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchWarning /> with desktop builds available renders with a logo by default 1`] = `
<DocumentFragment>
  <div
    class="mx_SearchWarning"
  >
    <img
      alt=""
      src="https://logo"
      width="32px"
    />
    <span>
      <span>
        Use the 
        <a
          href="https://url"
          rel="noreferrer noopener"
          target="_blank"
        >
          Desktop app
        </a>
         to search encrypted messages
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<SearchWarning /> with desktop builds available renders without a logo when showLogo=false 1`] = `
<DocumentFragment>
  <div
    class="mx_SearchWarning"
  >
    <span>
      <span>
        Use the 
        <a
          href="https://url"
          rel="noreferrer noopener"
          target="_blank"
        >
          Desktop app
        </a>
         to search encrypted messages
      </span>
    </span>
  </div>
</DocumentFragment>
`;
